   method of the analysis pipeline
 - increased number of threads for p4 stage1 (newer bambi version required)
 - added LSF-independent evaluation for number of threads
 - removed redundant dependency on illumina2bam jars
 - stopped forcing ownership and permissions when creating
   new directories
 - single log directory for all jobs with per-function subdirectories
 - added wr executor
 - new modules to execute submission of definitions to LSF
 - captured dependencies between pipeline steps in a directed acyclic graph
 - moved flags, attributes and method related to the overall
   pipeline logic to npg_pipeline::pluggable
 - flattened directory structure for modules implementing functions,
   they all now belong to npg_pipeline::function namespace
 - removed methods representing functions, created mapping of
   functions to modules, methods and options in
   npg_pipeline::pluggable::registry
 - removed ::harold:: component from pipelines'namespace
 - removed post_qc_review pipeline module
 - added npg_pipeline_ prefix to this package's script names if
   was not part of their name
 - removed unused module for fixing Illumina config files
 - removed unused module for LSF job creation for tag deplexing -
   this is now done within p4 stage 1
 - removed unused implementation for function copy_interop_files_to_irods
 - removed unused spatial_filter, fix_broken_files and force_phix_split flags
 - removed a number of unused methods in npg_pipeline::base

release 51.12.2
 - fixed lane taglist files for TraDIS libraries
     no longer pad spiked phix tag simply add missing i5 tag for dual index runs
 - update p4 stage defaul values in general_values.ini
     p4_stage1_memory=20000, +p4_stage1_slots=8, +p4_stage1_i2b_thread_count=8

release 51.12.1
 - tweak to GbS library type check in seq_alignment.pm as arrived as GBS (now case-insensitive).

release 51.12.0
 - Travis CI build - add iRODS test server
 - run_is_deletable script moved to this package from data_handling,